# op-geth

./: .gitignore  .gitmodules  Dockerfile  go.mod  go.sum  start.sh
.github/workflows/: img.yaml
common/: types.go
core/: state_transition.go
core/types/: receipt.go
core/vm/: contracts.go  contracts_test.go  evm.go
core/vm/wasm/: hello_wasm.wasm  lib.rs
params/: config.go
precompiles/: Cargo.toml  README.md  precompiles.go
precompiles/src/: lib.rs
precompiles/src/anon/: transfer.rs
precompiles/src/shuffle/: compute_aggregate_key.rs  mask.rs  mod.rs  reveal.rs  utils.rs  verify_key_ownership.rs  verify_reveal.rs  verify_shuffle.rs
