[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
ethabi = "18.0.0"
primitive-types = "0.12.2"
lazy_static = "1.4.0"
bincode = "1.3.3"
sha3 = "0.10.8"
rayon = "1.7.0"
num-bigint = "0.4"
hypr-crypto = { package = "crypto",  git = "ssh://git@github.com/HyprNetwork/hypr-crypto-lib.git" }
hypr-algebra = { package = "algebra",  git = "ssh://git@github.com/HyprNetwork/hypr-crypto-lib.git" }
hypr-api = { package = "api",  git = "ssh://git@github.com/HyprNetwork/hypr-crypto-lib.git" }
hypr-plonk = { package = "plonk", git = "ssh://git@github.com/HyprNetwork/hypr-crypto-lib.git" }
ark-std = { version = "0.4.0", features = ["std"] }
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-bn254 = "0.4.0"
barnett-smart-card-protocol = { git = "ssh://git@github.com/HyprNetwork/hypr-shuffle.git", branch = "main" }
proof-essentials = { git = "ssh://git@github.com/HyprNetwork/hypr-shuffle.git", branch = "main" }

[dev-dependencies]
hex = "0.4.3"
